Fix scrollbar issue

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ a:hover   { color: #aaa; }
   font-size: 115%;
   text-align: justify;
   width: 42em;
-  margin: 3em auto 2em;
+  margin: 0 auto 2em;
+  padding-top: 3em;
   line-height: 1.5em;
   position: relative;
 }
